# kinect_calib

./: .gitignore  CMakeLists.txt  README.md
conf/: config.ini
include/: cloudViewer.h  ledReader.h
src/: cloudViewer.cpp  ledReader.cpp  main.cpp
